Improve Modify Behavior power

--- a/src/main/resources/assets/touhouorigins/lang/en_us.json
+++ b/src/main/resources/assets/touhouorigins/lang/en_us.json
@@ -93,7 +93,7 @@
   "touhouorigins.gui.badge.upgrade": "Upgrade path",
 
   "advancements.touhouorigins.root.title": "Touhou Origins",
-  "advancements.touhouorigins.root.description": "Gensokyo in Minecraft",
+  "advancements.touhouorigins.root.description": "Welcome to Gensokyo",
   "advancements.touhouorigins.close_eye.title": "Rejection of Nature",
   "advancements.touhouorigins.close_eye.description": "Close your third eye"
 }
